# semver

./: .gitignore  CMakeLists.txt
conanpkg/: conanfile.py
conanpkg/test_package/: conanfile.py  example.cpp
include/versioning/: base_version.h  generic_version.h  read_only_version.h  version_comparator.h  version_data.h  version_modifier.h  version_parser.h
include/versioning/semver/2_0_0/: comparator.h  modifier.h  parser.h  version.h
src/: base_version.cpp  exceptions.h  read_only_version.cpp  vector_utils.h
src/semver/2_0_0/: comparator.cpp  modifier.cpp  parser.cpp
test/: CMakeLists.txt  clang_fixes.cpp  semver200_modifier_tests.cpp
test/semver/2_0_0/: comparator_tests.cpp  modifier_tests.cpp  parser_tests.cpp  parser_util.h  version_tests.cpp
